# docassemble-MichiganFoodStampCalculator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MichiganFoodStampCalculator/data/questions/: SnapCalculator-calculation.yml  SnapCalculator-logic.yml  SnapCalculator-parameters.yml  SnapCalculator-questions.yml
docassemble/MichiganFoodStampCalculator/data/static/: progressivedisclosure.css  survey_monkey_script.js
docassemble/MichiganFoodStampCalculator/data/templates/: snap-details.docx  snap-summary.docx
